text opacity overflow fix

--- a/src/renderer/styles/global.styl
+++ b/src/renderer/styles/global.styl
@@ -33,15 +33,11 @@ a
   font-size 14px
   line-height 18px
 
-.text-overflow
-  -webkit-margin-start .1px //! Без этого не обновляется хитрый градиентный текст, если меняется. работает с задержкой
-  z-index 1 //! Без этого не обновляется хитрый градиентный текст, если меняется. работает с задержкой
-  pointer-events none
+.text-overflow //! use in pair with dynamic "key" attr to trigger re-render
   white-space nowrap
-  background -webkit-linear-gradient(180deg, transparent, transparent 10px, currentColor 30px)
+  background-image -webkit-linear-gradient(180deg, transparent, transparent 10px, currentColor 30px)
   -webkit-background-clip text
   -webkit-text-fill-color transparent
-
 
 /**
  * Layout class generator
